Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Driver class here\n"
+    "# Define Driver class here\n",
+    "class Driver(self):\n",
+    "    "
    ]
   },
   {
