Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,8 @@
    "source": [
     "# Define Driver class here\n",
     "class Driver(self):\n",
-    "    def greeting(self)"
+    "    def greeting(self):\n",
+    "        return 'Hey, '"
    ]
   },
   {
