--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,8 @@
     "    def greeting(self):\n",
     "        return 'Hey, how are you?'\n",
     "    \n",
-    "    def ask_for_destination------------"
+    "    def ask_for_destination(self):\n",
+    "        ''"
    ]
   },
   {
