Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger class here "
+    "# Define Passenger class here\n"
    ]
   },
   {
