--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger class here\n"
+    "# Define Passenger class here\n",
+    "class Passenger"
    ]
   },
   {
