Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,12 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define Driver class here\n",
-    "class Driver():\n",
+    "class Driver:\n",
     "    \n",
     "    def greeting(self):\n",
     "        return 'Hey, how are you?'\n",
@@ -86,7 +86,8 @@
    "outputs": [],
    "source": [
     "# Define Passenger class here\n",
-    "class Passenger"
+    "class Passenger():\n",
+    "    "
    ]
   },
   {
