Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "# Define Passenger class here\n",
-    "class Passenger():\n",
+    "class Passenger:\n",
     "    "
    ]
   },
