--- a/index.ipynb
+++ b/index.ipynb
@@ -87,7 +87,8 @@
    "source": [
     "# Define Passenger class here\n",
     "class Passenger:\n",
-    "    "
+    "    \n",
+    "    def reply_greeting():"
    ]
   },
   {
