--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,8 @@
     "# Define Passenger class here\n",
     "class Passenger:\n",
     "    \n",
-    "    def reply_greeting():"
+    "    def reply_greeting():\n",
+    "        return 'I am doing well'"
    ]
   },
   {
