--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,10 @@
     "class Passenger:\n",
     "    \n",
     "    def reply_greeting():\n",
-    "        return 'I am doing well'"
+    "        return 'I am doing well!'\n",
+    "    \n",
+    "    def in_a_hurry():\n",
+    "        return"
    ]
   },
   {
