Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
     "        return 'I am doing well!'\n",
     "    \n",
     "    def in_a_hurry():\n",
-    "        return"
+    "        return 'Punch it! '"
    ]
   },
   {
