--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
     "        return 'I am doing well!'\n",
     "    \n",
     "    def in_a_hurry():\n",
-    "        return 'Punch it! They\\''"
+    "        return 'Punch it! They\\'re on our tail!'"
    ]
   },
   {
