--- a/index.ipynb
+++ b/index.ipynb
@@ -108,12 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "daniel = Driver # driver\n",
-    "niky = None # passenger"
+    "daniel = Driver() # driver\n",
+    "niky = Passenger() # passenger"
    ]
   },
   {
