--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "polite_greeting = daniel.\n",
+    "polite_greeting = daniel.polite_greeting\n",
     "print(polite_greeting)"
    ]
   },
