--- a/index.ipynb
+++ b/index.ipynb
@@ -128,11 +128,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Driver' object has no attribute 'polite_greeting'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-4ce2e8a81bee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpolite_greeting\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdaniel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpolite_greeting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpolite_greeting\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Driver' object has no attribute 'polite_greeting'"
+     ]
+    }
+   ],
    "source": [
-    "polite_greeting = daniel.polite_greeting\n",
+    "polite_greeting = daniel.pgreeting\n",
     "print(polite_greeting)"
    ]
   },
