Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Lion class\n"
+    "# Create Lion class\n",
+    "class Lion:\n",
+    "    def "
    ]
   },
   {
