--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,8 @@
    "source": [
     "# Create Lion class\n",
     "class Lion:\n",
-    "    def "
+    "    def speak(self):\n",
+    "        return"
    ]
   },
   {
