Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -180,7 +180,7 @@
     "# Create Lion class\n",
     "class Lion:\n",
     "    def speak(self):\n",
-    "        return"
+    "        return ''"
    ]
   },
   {
