Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Lion class\n",
     "class Lion:\n",
     "    def speak(self):\n",
-    "        return ''"
+    "        return 'Roooooar!!!'"
    ]
   },
   {
@@ -189,7 +189,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Tiger class\n"
+    "# Create Tiger class\n",
+    "class "
    ]
   },
   {
