--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,9 @@
    "outputs": [],
    "source": [
     "# Create Tiger class\n",
-    "class "
+    "class Tiger:\n",
+    "    def speak(self):\n",
+    "        return ''"
    ]
   },
   {
