--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
     "# Create Tiger class\n",
     "class Tiger:\n",
     "    def speak(self):\n",
-    "        return ''"
+    "        return 'Roo'"
    ]
   },
   {
