Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Tiger class\n",
     "class Tiger:\n",
     "    def speak(self):\n",
-    "        return 'Roo'"
+    "        return 'Rooar!!'"
    ]
   },
   {
@@ -201,7 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Elephant class\n"
+    "# Create Elephant class\n",
+    "class "
    ]
   },
   {
