Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,8 @@
    "outputs": [],
    "source": [
     "# Create Elephant class\n",
-    "class "
+    "class Elephant:\n",
+    "    def speak(self)"
    ]
   },
   {
