Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,8 @@
    "source": [
     "# Create Elephant class\n",
     "class Elephant:\n",
-    "    def speak(self)"
+    "    def speak(self):\n",
+    "        return 'Awoooo'"
    ]
   },
   {
