Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
     "# Create Elephant class\n",
     "class Elephant:\n",
     "    def speak(self):\n",
-    "        return 'Awoooo'"
+    "        return 'Arrooooooooo'"
    ]
   },
   {
