--- a/index.ipynb
+++ b/index.ipynb
@@ -197,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Elephant class\n",
     "class Elephant:\n",
     "    def speak(self):\n",
-    "        return 'Arrooooooooo'"
+    "        return 'Arrooooooooo!'"
    ]
   },
   {
@@ -220,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simba = None\n",
+    "simba = \n",
     "tony = None\n",
     "dumbo = None"
    ]
