--- a/index.ipynb
+++ b/index.ipynb
@@ -220,9 +220,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simba = \n",
-    "tony = None\n",
-    "dumbo = None"
+    "simba = Lion()\n",
+    "tony = Tiger()\n",
+    "dumbo = Elephan"
    ]
   },
   {
