Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    "source": [
     "simba = Lion()\n",
     "tony = Tiger()\n",
-    "dumbo = Elephan"
+    "dumbo = Elephant()"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zoo = None"
+    "zoo = [simba, ]"
    ]
   },
   {
