--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,11 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zoo = [simba, ]"
+    "zoo = [simba, tony, dumbo]"
    ]
   },
   {
