Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for x in zoo:\n",
+    "    print(x.sp)"
+   ]
   },
   {
    "cell_type": "markdown",
